@@ -11,6 +11,7 @@
 #include "HepMC/ParticleDataTable.h"
 #include "HepMC/HeavyIon.h"
 #include "HepMC/PdfInfo.h"
+#include "HepMC/Version.h"
 
 namespace HepMC {
 
@@ -61,6 +62,8 @@ namespace HepMC {
 	// write event listing key before first event only.
 	if ( !m_finished_first_event_io ) {
 	    m_finished_first_event_io = 1;
+	    m_file << "\n" << "HepMC::IO_ExtendedAscii-Version "
+	           << versionName();
 	    m_file << "\n" << "HepMC::IO_ExtendedAscii-START_EVENT_LISTING\n";
 	}
 	//
