@@ -1,4 +1,5 @@
 
+HepMC::IO_ExtendedAscii-Version 2.01.02
 HepMC::IO_ExtendedAscii-START_EVENT_LISTING
 E 9 51 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 309 1 2 0 0
 H 0 0 0 0 0 0 0 0 0 0 0 0 0
